# relay

./: .dockerignore  Cargo.toml
relay-filter/src/: csp.rs
relay-general/src/protocol/: session.rs  types.rs
relay-metrics/src/: aggregation.rs
relay-server/src/: envelope.rs  lib.rs  service.rs
relay-server/src/actors/: envelopes.rs  project.rs  project_cache.rs  store.rs
relay-server/src/endpoints/: attachments.rs  common.rs  envelope.rs  minidump.rs  security_report.rs  store.rs  unreal.rs
relay-server/src/metrics_extraction/: sessions.rs
relay-server/src/utils/: dynamic_sampling.rs
relay-system/src/: controller.rs  service.rs
tests/: Cargo.toml
tests/integration/: test_session.py
tests/tests/: test_envelope.rs
